сделал второй блок, преимущетсва

--- a/Lending/global_opt/src/sass/style.scss
+++ b/Lending/global_opt/src/sass/style.scss
@@ -15,4 +15,6 @@
 
 @import 'blocks/main';
 @import 'blocks/header';
-@import 'blocks/buttons'
+@import 'blocks/buttons';
+@import 'blocks/title';
+@import 'blocks/advantages'
