сделал 2 блока, jobs, agent

--- a/Lending/global_opt/src/sass/style.scss
+++ b/Lending/global_opt/src/sass/style.scss
@@ -17,4 +17,7 @@
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/title';
-@import 'blocks/advantages'
+@import 'blocks/subtitle';
+@import 'blocks/advantages';
+@import 'blocks/jobs';
+@import 'blocks/agent'
