--- a/Lending/global_opt/src/sass/style.scss
+++ b/Lending/global_opt/src/sass/style.scss
@@ -20,4 +20,6 @@
 @import 'blocks/subtitle';
 @import 'blocks/advantages';
 @import 'blocks/jobs';
-@import 'blocks/agent'
+@import 'blocks/insert';
+@import 'blocks/prices';
+@import 'blocks/consultation';
